test/parser/error/err_05_const_assign_missing.pl0
program p; 
const x 10; 
begin 
end